--- a/recetas/Colombia/arroz_coco.html
+++ b/recetas/Colombia/arroz_coco.html
@@ -5,10 +5,7 @@
 	<TITLE>Arroz con coco y camarón fresco</TITLE>
 </HEAD>
 <BODY LANG="es-ES">
-<<<<<<< HEAD
-<H1><IMG ID="imagen1" SRC="../../imagenes/ajiaco.jpg" NAME="Imagen1" ALIGN=LEFT BORDER=0><BR CLEAR=LEFT><BR>
-=======
->>>>>>> 155cbaab8fa36dc64f7db1e69c0556b863261f4b
+<H1><IMG ID="imagen3" SRC="../../imagenes/arroz_coco.jpg" NAME="Imagen1" ALIGN=LEFT BORDER=0><BR CLEAR=LEFT><BR>
 </H1>
 <H1 ID="titulo3">Arroz con coco y camarón fresco (Región Caribe)</H1>
 <BR>
@@ -33,6 +30,6 @@
 
 	<P>Mezclar con el arroz previamente lavado y los camarones. Dejar secar y continuar la cocción a fuego bajo tapado, hasta que el arroz esté listo.</P>
 <BR>
-<P><A ID="enlace3" HREF="ajiaco.html">Ajiaco Santaferano</A></P>
+<P><A ID="enlace3" HREF="ajiaco.html">Ajiaco</A></P>
 </BODY>
 </HTML>
